--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "itty-router": "^3.0.12",
     "typescript": "^5.4.5",
     "wrangler": "^3.60.3"
+  },
+  "dependencies": {
+    "google-trends-api": "github:chand1012/google-trends-api"
   }
 }
